--- a/index.html
+++ b/index.html
@@ -60,17 +60,22 @@
     <nav class="top-menu  sticky-top">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
-            <span class="nav-text">
-              <i class="fas fa-phone" aria-hidden="true"></i>   {{MasterInfo[0].CubeLocalPhone}}
-            </div>
 
-            <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 text-right">
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-right">
               <ul class="right-menu ">
+                <li class="nav-text"> <i class="fas fa-phone" aria-hidden="true"></i>   {{MasterInfo[0].CubeLocalPhone}}</li>
                 <li><a href=""><i class="fas fa-question-circle"></i></a></li>
+
                 <li class="dropdown">
-                  <a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
+                  <a class=" dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-user" aria-hidden="true"></i> My Account
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Close sesion</a>
+                  </div>
                 </li>
+
                 <li class="dropdown">
                   <a class="" href="login.html"> Login/Register</a>
                 </li>
@@ -87,7 +92,7 @@
         <div class="container-fluid">
           <!--logo -->
 
-          <a class="navbar-brand" href="#"><img ng-src="{{'/'+ MasterInfo[0].HOMELOGO}}" style="max-width:130px;" /></a>
+          <a class="navbar-brand" href="index.html"><img ng-src="{{'/'+ MasterInfo[0].HOMELOGO}}" style="max-width:130px;" /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -145,7 +150,7 @@
       <section >
         <div class="container">
           <br> <br>
-          <h3 class="text-center"><strong>PRODUCTS</strong></h3>
+          <div ><h3 class="text-center">PRODUCTS</h3></div>
           <br>
           <div class="">
             <div  class="row"  ng-repeat="(key, value) in ProductCards | groupBy: 'Fila'" style="margin-bottom:20px;">
