--- a/payment-information.html
+++ b/payment-information.html
@@ -2,9 +2,11 @@
 <html lang="en-us">
 
 <head>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>ConBox::..</title>
+	<link href="//netdna.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css"/> <!--enlace de hoja de estilos -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
@@ -17,8 +19,10 @@
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
+	<script src="js/ui-bootstrap-tpls.js"></script>
 
-
+	<!--Boostrap JS Para animaciones-->
+	<script src="js/bootstrap.min.js"></script>
 	<!--Listas-->
 	<script src="js/Lists.js"></script>
 	<!-- font Awesome -->
@@ -29,10 +33,8 @@
 
 	<script src="js/angular-filter.min.js"></script>
 	<!-- *****************************************Boostrap Angular Librerías***************************************** -->
-	<script src="js/ui-bootstrap-tpls-3.0.3.min.js"></script>
+	<script src="js/ui-bootstrap-tpls.js"></script>
 	<link rel="stylesheet" href="css/svg-icon.css"/>
-	<!-- *****************************************Boostrap 4 Css librerías ***************************************** -->
-	<link href="//netdna.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<!-- *****************************************Código de Select Boostrap Angular***************************************** -->
 	<script src="./select.js"></script>
 	<link rel="stylesheet" href="./select.css">
@@ -52,6 +54,7 @@
 	<script src="https://ptreesys.mx/sharedfiles/src/sweetalert.min.js"></script>
 	<!-- Pattern -->
 	<script src="js/ng-pattern-restrict.js"></script>
+
 </head>
 
 <body ng-controller="ctrlCubeShopHomePaymentInformation">
@@ -60,14 +63,13 @@
 			 <div class="container-fluid">
 				 <div class="row">
 					 <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
-						 <span class="nav-text">
-							 <i class="fas fa-phone" aria-hidden="true"></i>   {{MasterInfo[0].CubeLocalPhone}}
 
 						 </div>
 
 				 <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 text-right">
 							 <ul class="right-menu ">
-							 <li><a href=""><i class="fas fa-question-circle"></i></a></li>
+								 <li class="nav-text"> <i class="fas fa-phone" aria-hidden="true"></i>   {{MasterInfo[0].CubeLocalPhone}}</li>
+							 	 <li><a href=""><i class="fas fa-question-circle"></i></a></li>
 								 <li class="dropdown">
 									<a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
 								</li>
@@ -88,7 +90,7 @@
 			<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 				<div class="container-fluid">
 					<!--logo -->
-					<a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
+					<a class="navbar-brand"  href="index.html"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
@@ -132,40 +134,46 @@
 
 	<div class="container wrap heading-principal">
 
-  <div id="jumptopayment"  class="heading heading-principal">
-    <h1>Payment Information</h1>
-    <a href="#jumpto" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new card</a>
-  </div>
-  <div class="cart-shopping">
-		<table class="table table-hover">
-		  <thead>
-		    <tr>
-					<th></th>
-		      <th scope="col">Your credit and debits cards</th>
-		      <th scope="col">Name on Card</th>
-		      <th scope="col">Expires on</th>
-					<th></th>
+  <div>
+		<div id="jumptopayment"  class="heading heading-principal">
+	    <h3>Payment Information</h3>
 
-		    </tr>
-		  </thead>
-		  <tbody>
-		    <tr ng-repeat="PaymentInfo in PaymentsInfo">
-		      <th scope="row"> <input ng-model="$parent.CreditCardNumberSelected" ng-value="PaymentInfo" type="radio" aria-label="Radio button for following text input"></th>
-		      <td>{{PaymentInfo.CreditCardNumber}}</td>
-		      <td>{{PaymentInfo.FirstName}}</td>
-		      <td>{{PaymentInfo.ExpirationDate | date:'MM/dd/yyyy'}}</td>
-					<td><a ng-click="DeleteCreditCard(PaymentInfo.CreditCardNumber);" class="btn "><i class="fas fa-times"></i></a></td>
-		    </tr>
-		  </tbody>
-		</table>
-<br>
+	  </div>
+	  <div class="cart-shopping">
+			<a href="#jumpto" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new card</a>
+
+			<table class="table  table-bordered" style="margin-top:5%;">
+			  <thead>
+			    <tr  class="table-secondary">
+						<th></th>
+			      <th scope="col" style="text-align: left;">Your credit and debits cards</th>
+			      <th scope="col">Name on Card</th>
+			      <th scope="col">Expires on</th>
+						<th></th>
+			    </tr>
+			  </thead>
+			  <tbody>
+			    <tr ng-repeat="PaymentInfo in PaymentsInfo">
+			      <th scope="row"> <input ng-model="$parent.CreditCardNumberSelected" ng-value="PaymentInfo" type="radio" aria-label="Radio button for following text input"></th>
+			      <td>{{PaymentInfo.CreditCardNumber}}</td>
+			      <td>{{PaymentInfo.FirstName}}</td>
+			      <td>{{PaymentInfo.ExpirationDate | date:'MM/dd/yyyy'}}</td>
+						<td><a ng-click="DeleteCreditCard(PaymentInfo.CreditCardNumber);" class="btn "><i class="fas fa-times"></i></a></td>
+			    </tr>
+			  </tbody>
+			</table>
+	<br>
 
 
-<div class="row justify-content-end">
-	<div class="col-md-4 ">
-		<a ng-click="Continue();" class="btn btn-secondary btn-green btn-block ">Continue</a>
+	<div class="row justify-content-end">
+		<div class="col-md-4 ">
+			<a><button ng-click="Continue();" class="btn btn-secondary btn-green btn-block">Continue</button></a>
+
+
+		</div>
 	</div>
-</div>
+  </div>
+
 
 		<div id="jumpto"> </div>
 		<br>
@@ -175,107 +183,111 @@
 		<br>
 		<br>
 
-		<form name="newCreditCard">
-			<fieldset>
-		<h6 > <strong>Add new Payment Information</strong></h6>
-		<hr>
-		<div class="row">
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="exampleInputEmail1">First Name: </label>
-					<input ng-model="FirstName" name="FirstName" type="text" class="form-control" placeholder="" ng-class="{'is-invalid':newCreditCard.FirstName.$invalid && newCreditCard.FirstName.$dirty}" ng-required="true" >
+		<div>
+			<form name="newCreditCard">
+				<fieldset>
+			<h6 > <strong>Add new Payment Information</strong></h6>
+			<hr>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="exampleInputEmail1">First Name: </label>
+						<input ng-model="FirstName" name="FirstName" type="text" class="form-control" placeholder="" ng-class="{'is-invalid':newCreditCard.FirstName.$invalid && newCreditCard.FirstName.$dirty}" ng-required="true" >
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="exampleInputPassword1">Last Name: </label>
+						<input ng-model="LastName" name="LastName" type="text" class="form-control" placeholder="" ng-class="{'is-invalid':newCreditCard.LastName.$invalid && newCreditCard.LastName.$dirty}" ng-required="true" >
+					</div>
 				</div>
 			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="exampleInputPassword1">Last Name: </label>
-					<input ng-model="LastName" name="LastName" type="text" class="form-control" placeholder="" ng-class="{'is-invalid':newCreditCard.LastName.$invalid && newCreditCard.LastName.$dirty}" ng-required="true" >
-				</div>
-			</div>
-		</div>
 
-		<div class="row">
+			<div class="row">
+
+					<div class="col-md-6">
+						<div class="form-group">
+							<label for="exampleInputPassword1">	Credit Card Type:</label>
+							<select ng-model="CreditCardType" class="form-control" ng-class="{'is-invalid':newCreditCard.CreditCardType.$invalid && newCreditCard.CreditCardType.$dirty}" ng-required="true">
+								<option>VISA</option>
+								<option>MASTER CARD</option>
+							</select>
+						</div>
+					</div>
 
 				<div class="col-md-6">
 					<div class="form-group">
-						<label for="exampleInputPassword1">	Credit Card Type:</label>
-						<select ng-model="CreditCardType" class="form-control" ng-class="{'is-invalid':newCreditCard.CreditCardType.$invalid && newCreditCard.CreditCardType.$dirty}" ng-required="true">
-							<option>VISA</option>
-							<option>MASTER CARD</option>
-						</select>
+						<label for="exampleInputPassword1">Credit Card Number: </label>
+						<input ng-model="CreditCardNumber" name="CreditCardNumber" type="text" class="form-control" placeholder="" ng-class="{'is-invalid':newCreditCard.CreditCardNumber.$invalid && newCreditCard.CreditCardNumber.$dirty}" ng-required="true" >
 					</div>
-				</div>
-
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="exampleInputPassword1">Credit Card Number: </label>
-					<input ng-model="CreditCardNumber" name="CreditCardNumber" type="text" class="form-control" placeholder="" ng-class="{'is-invalid':newCreditCard.CreditCardNumber.$invalid && newCreditCard.CreditCardNumber.$dirty}" ng-required="true" >
 				</div>
 			</div>
+	<div class="row">
+	<div class="col-md-6">
+		<div class="form-group">
+			<label for="exampleInputPassword1">Code: </label>
+			<input ng-model="CreditCardCode" name="CreditCardCode" type="text" class="form-control" placeholder="" ng-class="{'is-invalid':newCreditCard.CreditCardCode.$invalid && newCreditCard.CreditCardCode.$dirty}" ng-required="true" >
 		</div>
-<div class="row">
-<div class="col-md-6">
-	<div class="form-group">
-		<label for="exampleInputPassword1">Code: </label>
-		<input ng-model="CreditCardCode" name="CreditCardCode" type="text" class="form-control" placeholder="" ng-class="{'is-invalid':newCreditCard.CreditCardCode.$invalid && newCreditCard.CreditCardCode.$dirty}" ng-required="true" >
 	</div>
-</div>
 
-<div class="col-md-6">
-	<p class="input-group">
-		<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="ExpirationDate" name="ExpirationDate" ng-class="{'is-invalid':newCreditCard.ExpirationDate.$invalid && newCreditCard.ExpirationDate.$dirty}" ng-required="true"  is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
-		<span class="input-group-btn">
-			<button type="button" class="btn btn-secondary" ng-click="open1()">
-				<i class="fa-svg-icon">
-					<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M192 1664h288v-288h-288v288zm352 0h320v-288h-320v288zm-352-352h288v-320h-288v320zm352 0h320v-320h-320v320zm-352-384h288v-288h-288v288zm736 736h320v-288h-320v288zm-384-736h320v-288h-320v288zm768 736h288v-288h-288v288zm-384-352h320v-320h-320v320zm-352-864v-288q0-13-9.5-22.5t-22.5-9.5h-64q-13 0-22.5 9.5t-9.5 22.5v288q0 13 9.5 22.5t22.5 9.5h64q13 0 22.5-9.5t9.5-22.5zm736 864h288v-320h-288v320zm-384-384h320v-288h-320v288zm384 0h288v-288h-288v288zm32-480v-288q0-13-9.5-22.5t-22.5-9.5h-64q-13 0-22.5 9.5t-9.5 22.5v288q0 13 9.5 22.5t22.5 9.5h64q13 0 22.5-9.5t9.5-22.5zm384-64v1280q0 52-38 90t-90 38h-1408q-52 0-90-38t-38-90v-1280q0-52 38-90t90-38h128v-96q0-66 47-113t113-47h64q66 0 113 47t47 113v96h384v-96q0-66 47-113t113-47h64q66 0 113 47t47 113v96h128q52 0 90 38t38 90z"/></svg>
-				</i>
-			</button>
-		</span>
-	</p>
-</div>
+	<div class="col-md-6">
+			<label for="exampleInputPassword1">Experation date: </label>
+		<div class="input-group">
 
-
-<!-- <div class="col-md-3">
-	<div class="form-group">
-		<label>Expiration Date:</label>
-					<div class="input-group">
-							<input ng-model="datExpirationDate" type="text" class="form-control" uib-datepicker-popup="{{format}}" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
-							<span class="input-group-btn">
-									<button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
-							</span>
-					</div>
-
-	</div>
-</div> -->
-
-<!-- <div class="col-md-3">
-	<div class="input-group">
-		<label for="exampleInputPassword1"> </label>
-			<input ng-model="datExpirationDate" type="text" class="form-control" uib-datepicker-popup="{{format}}" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+			<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="ExpirationDate" name="ExpirationDate" ng-class="{'is-invalid':newCreditCard.ExpirationDate.$invalid && newCreditCard.ExpirationDate.$dirty}" ng-required="true"  is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
 			<span class="input-group-btn">
-					<button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+				<button type="button" class="btn btn-secondary" ng-click="open1()">
+					<i class="fa-svg-icon">
+						<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M192 1664h288v-288h-288v288zm352 0h320v-288h-320v288zm-352-352h288v-320h-288v320zm352 0h320v-320h-320v320zm-352-384h288v-288h-288v288zm736 736h320v-288h-320v288zm-384-736h320v-288h-320v288zm768 736h288v-288h-288v288zm-384-352h320v-320h-320v320zm-352-864v-288q0-13-9.5-22.5t-22.5-9.5h-64q-13 0-22.5 9.5t-9.5 22.5v288q0 13 9.5 22.5t22.5 9.5h64q13 0 22.5-9.5t9.5-22.5zm736 864h288v-320h-288v320zm-384-384h320v-288h-320v288zm384 0h288v-288h-288v288zm32-480v-288q0-13-9.5-22.5t-22.5-9.5h-64q-13 0-22.5 9.5t-9.5 22.5v288q0 13 9.5 22.5t22.5 9.5h64q13 0 22.5-9.5t9.5-22.5zm384-64v1280q0 52-38 90t-90 38h-1408q-52 0-90-38t-38-90v-1280q0-52 38-90t90-38h128v-96q0-66 47-113t113-47h64q66 0 113 47t47 113v96h384v-96q0-66 47-113t113-47h64q66 0 113 47t47 113v96h128q52 0 90 38t38 90z"/></svg>
+					</i>
+				</button>
 			</span>
-	</div>
-</div> -->
-
-<!-- <div class="col-md-3">
-	<div class="form-group">
-		<label for="exampleInputPassword1">Expiration Date: </label>
-		<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-	</div>
-</div> -->
-
-</div>
-
-		</fieldset>
-
-		<div class="row justify-content-end">
-			<div class="col-md-4 ">
-				<a href="payment-information.html"><button ng-click="SaveCreditCard();" type="submit" class="btn btn-secondary btn-green btn-block">Save Credit Card</button></a>
-			</div>
 		</div>
+	</div>
 
-		</form>
+
+	<!-- <div class="col-md-3">
+		<div class="form-group">
+			<label>Expiration Date:</label>
+						<div class="input-group">
+								<input ng-model="datExpirationDate" type="text" class="form-control" uib-datepicker-popup="{{format}}" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+								<span class="input-group-btn">
+										<button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+								</span>
+						</div>
+
+		</div>
+	</div> -->
+
+	<!-- <div class="col-md-3">
+		<div class="input-group">
+			<label for="exampleInputPassword1"> </label>
+				<input ng-model="datExpirationDate" type="text" class="form-control" uib-datepicker-popup="{{format}}" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+				<span class="input-group-btn">
+						<button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+				</span>
+		</div>
+	</div> -->
+
+	<!-- <div class="col-md-3">
+		<div class="form-group">
+			<label for="exampleInputPassword1">Expiration Date: </label>
+			<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+		</div>
+	</div> -->
+
+	</div>
+
+			</fieldset>
+
+			<div class="row justify-content-end">
+				<div class="col-md-4 ">
+					<a><button ng-click="SaveCreditCard();" type="submit" class="btn btn-secondary btn-green btn-block">Save Credit Card</button></a>
+				</div>
+			</div>
+
+			</form>
+		</div>
 		<br>
 
 		<br>
