--- a/login.html
+++ b/login.html
@@ -61,13 +61,11 @@
 		 <div class="container-fluid">
 			 <div class="row">
 				 <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
-					 <span class="nav-text">
-						 <i class="fas fa-phone" aria-hidden="true"></i>   {{MasterInfo[0].CubeLocalPhone}}
-
-					 </div>
+					 					 </div>
 
 			 <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 text-right">
 						 <ul class="right-menu ">
+							   <li class="nav-text"> <i class="fas fa-phone" aria-hidden="true"></i>   {{MasterInfo[0].CubeLocalPhone}}</li>
 						 <li><a href=""><i class="fas fa-question-circle"></i></a></li>
 							 <li class="dropdown">
 								<a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
@@ -89,7 +87,7 @@
 		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 			<div class="container-fluid">
 				<!--logo -->
-				<a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
+				<a class="navbar-brand"  href="index.html"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -130,7 +128,7 @@
 
 <main class="wrap">
 	<div class="container">
-    <div class="heading cf">
+    <div class="heading heading-principal">
       <h3>Sign in to your account</h3>
     </div>
     <br>
