--- a/order.html
+++ b/order.html
@@ -60,14 +60,14 @@
 			 <div class="container-fluid">
 				 <div class="row">
 					 <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
-						 <span class="nav-text">
-							 <i class="fas fa-phone" aria-hidden="true"></i>   + 786-293-3272
+						
 
 						 </div>
 
 				 <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 text-right">
 							 <ul class="right-menu ">
-							 <li><a href=""><i class="fas fa-question-circle"></i></a></li>
+								 <li class="nav-text"> <i class="fas fa-phone" aria-hidden="true"></i>   {{MasterInfo[0].CubeLocalPhone}}</li>
+							 	 <li><a href=""><i class="fas fa-question-circle"></i></a></li>
 								 <li class="dropdown">
 									<a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
 								</li>
@@ -88,7 +88,7 @@
 			<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 				<div class="container-fluid">
 					<!--logo -->
-					<a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
+					<a class="navbar-brand"  href="index.html"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
