--- a/shipping-address.html
+++ b/shipping-address.html
@@ -60,7 +60,7 @@
 			 <div class="container-fluid">
 				 <div class="row">
 					 <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
-						
+
 						 </div>
 
 				 <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 text-right">
@@ -135,8 +135,8 @@
     <h6><strong>Shipping address</strong></h6>
 
   </div>
-  <div class="cart-shopping">
-		  <a href="#jumpto" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new Shipping address</a>
+  <div ng-show="!shownewItem" class="cart-shopping">
+		  <a ng-click="AlternateNewListCard();" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new Shipping address</a>
 		<table class="table  table-bordered" style="margin-top:5%;">
 		  <thead>
 		    <tr class="table-secondary">
@@ -170,19 +170,13 @@
 
 			</div>
 		</div>
+	  </div>
 
-		<div id="jumpto"> </div>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
+		<div ng-show="shownewItem">
 
-		<form name="newShipping" style="margin-top:30px;">
+		<form  name="newShipping" style="margin-top:30px;">
           <fieldset>
 
-        <h6><strong>Shipping address</strong></h6>
         <hr>
           <div class="form-group">
             <label for="exampleInputEmail1">Street Address 1: </label>
@@ -229,6 +223,8 @@
 				</div>
 
       </form>
+
+		</div>
 
 		<br>
 
