--- a/login.html
+++ b/login.html
@@ -53,6 +53,8 @@
   <script src="https://ptreesys.mx/sharedfiles/src/sweetalert.min.js"></script>
   <!-- Pattern -->
   <script src="js/ng-pattern-restrict.js"></script>
+	<!-- *****************************************Librería de lodash***************************************** -->
+	<script src="js/lodash.min.js"></script>
 </head>
 
 <body ng-controller="ctrlCubeShopLoginController">
