--- a/products.html
+++ b/products.html
@@ -44,6 +44,8 @@
 	<script src="js/ng-tags-input.min.js"></script>
 	<!-- *****************************************Librería de file upload***************************************** -->
 	<script src="js/angular-file-upload.min.js"></script>
+	<!-- *****************************************Librería de lodash***************************************** -->
+	<script src="js/lodash.min.js"></script>
 	<!-- *****************************************Librería de boostrap toogle ***************************************** -->
 	<script src="js/angular-bootstrap-toggle.min.js"></script>
 	<!-- *****************************************Alertas***************************************** -->
@@ -58,7 +60,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
-					
+
 						</div>
 
 						<div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 text-right ">
