cambios titulos, tablas payment,shipping

--- a/creditcard-address.html
+++ b/creditcard-address.html
@@ -135,7 +135,7 @@
 	<div class="container wrap heading-principal">
 
   <div class="heading heading-principal">
-    <h1>Credit Card billing address</h1>
+    <h3>Credit Card billing address</h3>
     <a href="#jumpto" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new Credit Card billing address</a>
   </div>
   <div class="cart-shopping">
@@ -167,7 +167,7 @@
 		</table>
 		<div class="row justify-content-end">
 			<div class="col-md-4 ">
-				<a ng-click="Continue();" class="btn btn-secondary btn-green btn-block ">Continue</a>
+				<a><button ng-click="Continue();"  class="btn btn-secondary btn-green btn-block">Continue</<button></a>
 			</div>
 		</div>
 
