--- a/payment-information.html
+++ b/payment-information.html
@@ -145,9 +145,9 @@
 
 	  </div>
 	  <div ng-show="!shownewItem" class="cart-shopping">
-			<a ng-click="AlternateNewListCard();" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new card</a>
+			<a ng-click="AlternateNewListCard();" class="btn btn-secondary continue-shopping" style="color:white;"><i class="fas fa-plus"></i> Add new card</a>
 
-			<table class="table  table-bordered" style="margin-top:5%;">
+			<table class="table" style="margin-top:5%;">
 			  <thead>
 			    <tr  class="table-secondary">
 						<th></th>
@@ -179,7 +179,7 @@
 	</div>
   </div>
 
-
+<br>
 		<div ng-show="shownewItem">
 			<form name="newCreditCard">
 				<fieldset>
