table credicard estilo

--- a/creditcard-address.html
+++ b/creditcard-address.html
@@ -139,9 +139,9 @@
     <a href="#jumpto" class="btn btn-secondary continue-shopping"><i class="fas fa-plus"></i> Add new Credit Card billing address</a>
   </div>
   <div class="cart-shopping">
-		<table class="table table-hover">
+		<table class="table">
 		  <thead>
-		    <tr>
+		    <tr  class="table-secondary">
 					<th></th>
 		      <th scope="col">Address</th>
 		      <th scope="col">City</th>
